@@ -145,7 +145,7 @@ public:
           dhcp4_next_server_null_(MLM_FALSE),
           dhcp4_server_hostname_null_(MLM_FALSE),
           dhcp4_boot_file_name_null_(MLM_FALSE),
-          auth_key_null_(MLM_FALSE)  {
+          auth_key_null_(MLM_FALSE) {
 
         // Fill arrays with 0 so as they don't include any garbage.
         memset(dhcp_identifier_buffer_, 0, sizeof(dhcp_identifier_buffer_));
@@ -1430,7 +1430,6 @@ public:
 
         ipv6_address_buffer_[ipv6_address_buffer_len_] = '\0';
         std::string address = ipv6_address_buffer_;
-
         IPv6Resrv r(type, IOAddress(address), prefix_len_);
         return (r);
     };
