@@ -81,7 +81,7 @@ HostDataSourceUtils::initializeHost4(const std::string& address,
 }
 
 HostPtr
-HostDataSourceUtils::initializeHost6(const std::string address,
+HostDataSourceUtils::initializeHost6(std::string address,
                                      Host::IdentifierType identifier,
                                      bool prefix,
                                      bool new_identifier,
@@ -107,13 +107,11 @@ HostDataSourceUtils::initializeHost6(const std::string address,
     ++subnet4;
     ++subnet6;
 
-    std::string default_string;
     HostPtr host(new Host(&ident[0], ident.size(), identifier, subnet4, subnet6,
-                          IOAddress("0.0.0.0"), default_string,
-                          default_string, default_string,
-                           asiolink:: IOAddress::IPV4_ZERO_ADDRESS(), default_string, default_string,
-                          AuthKey(auth_key)));
-
+                          IOAddress("0.0.0.0")));
+    
+    host->setKey(AuthKey(auth_key));
+    
     if (!prefix) {
         // Create IPv6 reservation (for an address)
         IPv6Resrv resv(IPv6Resrv::TYPE_NA, IOAddress(address), 128);
